if WITH_SWIG
if WITH_PERL

perldir = $(libdir)/hector/modules/perl
perl_SCRIPTS = DnsResolver.pm Fetcher.pm Filter.pm FixRedirect.pm NewLinkFilter.pm PostFetch.pm PreFetch.pm RobotsFilter.pm RobotsParser.pm PageResourceCreator.pm TextResourceCreator.pm IndexResourceCreator.pm

EXTRA_DIST = ${perl_SCRIPTS}

endif
endif
