if WITH_SWIG
if WITH_PERL

perldir = $(libdir)/hector/modules/perl
perl_SCRIPTS = HectorRobotCommon.pm ResolveDns.pm Fetch.pm Filter.pm FixRedirect.pm FilterNewLinks.pm PostFetch.pm PreFetch.pm FilterRobots.pm ParseRobots.pm CreatePageResource.pm CreateTextResource.pm CreateIndexResource.pm IdPrefixToStatus.pm Unaccent.pm DetectNoAccents.pm DetectNoAccentsTrain.pm

EXTRA_DIST = ${perl_SCRIPTS}

endif
endif
